@@ -1,3 +1,9 @@
+2003-04-03  Theodore A. Roth  <troth@openavr.org>
+
+	* configure.in (AM_INIT_AUTOMAKE): Bump version.
+	* include/avr/iotn26.h: Add missing port and bit definitions.
+	[Contributed by Artur Lipowski <LAL@pro.onet.pl>]
+
 2003-03-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* doc/api/assembler.dox: more explanation about intr. vectors.
